# ceu-website

./: .dockerignore  .env.example  .gitignore  Dockerfile.prod  Makefile  README.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260131_0001_initial_schema.py  20260206_0002_state_code_constraints.py
apps/api/src/ce_api/: __init__.py  deps.py  main.py  schemas.py  storage.py
apps/api/src/ce_api/db/: __init__.py  session.py
apps/api/src/ce_api/models/: __init__.py  certificate.py  course_credit.py  credit_allocation.py  license_cycle.py  state_license.py  user.py
apps/api/src/ce_api/routers/: __init__.py  allocations.py  certificates.py  courses.py  cycles.py  progress.py  state_licenses.py  timeline.py
apps/api/src/ce_api/scripts/: __init__.py  demo_check.py  seed_demo.py
apps/api/tests/: conftest.py  test_allocations.py  test_certificates.py  test_courses.py  test_cycles.py  test_progress.py  test_state_licenses.py
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/web/src/components/: AppShell.tsx  BottomNav.tsx  CertificatePreview.tsx  DesktopNav.tsx  PageHeader.tsx
apps/web/src/lib/: api.ts  auth.ts  format.ts  types.ts  usStates.ts
apps/web/src/pages/: AuthCallback.tsx  (+5 more)
infra/: Pulumi.prod.yaml  Pulumi.yaml  README.md  index.ts  package-lock.json  package.json  tsconfig.json
scripts/: dev.sh  test.sh  wait_for_db.sh
(+16 files in other folders)
